fixed footer spacing

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -75,6 +75,6 @@ footer a {
     }
 
     .footer__socials {
-        margin-bottom: 6rem;
+        margin-bottom: 1.3rem;
     }
 }
